--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "url": "git://github.com/krishnaglick/flight-scanner.git"
   },
   "dependencies": {
-    "airport-codes": "1.0.2",
-    "moment-timezone": "0.4.1"
+    "airport-codes": "1.0.2"
   },
   "scripts": {
     "test": "mocha --timeout 10000"
